--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Plus Two political Commerce</h4>
+              <h4>Plus Two Computer Science</h4>
               <h5>2023 - 2025</h5>
               <p><em>M S M HSS kayamkulam</em></p>
               <p>"I completed my Plus Two with a strong academic foundation, which helped me build discipline and focus.
@@ -650,8 +650,8 @@
       <h3 class="sitename">Mahmudhal Asadh</h3>
       <p>"Passionate about innovation, growth, and creating meaningful digital experiences."</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.instagram.com/s4fwan_x?igsh=NTU5bnlyZ2d5YTJwl"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/muhammed-safwan-042b20337/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/asadh_official?igsh=d3p2bGlpb3NoNTBu"><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
